# demo

./: BubbleSort.cpp  CMakeLists.txt  LinkNode.cpp  LinkedStack.cpp  README.md  SeqList.cpp  SeqStack.cpp  floyed.cpp  sort.cpp  sort_the_struct1.cpp  sort_the_struct2.cpp  test.cpp
1.sort/: sort.cpp
2.Classic_entry/1.sort/: quick_sort.cpp  sort_the_struct2.cpp
2.Classic_entry/5.search/: BinarySearch.cpp
2.Classic_entry/6.GreedyAlgorithm/: FatMouseTrade.cpp  Not_AC.cpp
2.data/: data1.cpp  data2.cpp
3.Data_Structure/1.stack/: Bracket_Matching_Problem.cpp
3.Data_Structure/2.Huffman_Tree/: Huffman_Tree.cpp
3.Data_Structure/3.Binary_Tree/: Binary_Tree_Order.cpp
3.Hash/: Hash1.cpp  Hash2.cpp
4.Math_Problem/2.Digital_Disassembly/: 1.Special_Multiplication.cpp
4.Math_Problem/3.Number_Conversion/: 1.Another_A+B.cpp
6.GreedyAlgorithm/: Not_AC.cpp
Class/basic/: 1.Graphmtx.cpp  1.Tree.cpp  1.heap.cpp  1.queue.cpp  1.stack.cpp  2.Tree.cpp  2.heap.cpp  2.stack.cpp  3.Tree.cpp  3.stack.cpp  4.stack.cpp  compare.cpp
Class/basic/DisjointSet/: 1.cpp  1385.cpp
Class/basic/dp/: test.cpp
Class/basic/graph/: 1314.cpp  1349.cpp  1350.cpp  1376.cpp  1381.cpp  1382.cpp  1383.cpp  thhdlx.cpp
Class/lanqiao/: 1.cpp  2.cpp  3.cpp
Class/pujizu/NOIP2017/: 1.cpp  2.cpp
Class/pujizu/NOIP2018/: 1.cpp  2.cpp  3.cpp  4.cpp
Class/pujizu/lanqiao/: 4.cpp  5.cpp
Class/pujizu/lanqiao_lianxi/: 3.cpp
Class/update/1/: 1422.cpp  1435.cpp  1436.cpp  1440.cpp  1442.cpp  1448.cpp  test.cpp
Class/update/2/: 1455.cpp  1456-2.cpp  1456.cpp  1465.cpp  1466.cpp  1471.cpp  1472.cpp  P3780.cpp  P3796.cpp  test.cpp
Class/update/3/: 1486.cpp  1488.cpp  1489.cpp  HDU3062.cpp  P2921.cpp  P3388.cpp
Class/update/5.DP/: 1569.cpp  1587.cpp  1597.cpp  1610.cpp  CF372C.cpp  P1352.cpp  P1896.cpp  P2866.cpp  P3865.cpp
Class/update/math/: HDU1847.cpp  HDU1848.cpp  P1044.cpp  P1226.cpp  P1962.cpp  P3390.cpp
Class/zhuanti/: P2375.cpp  P3128.cpp  P5312.cpp
LeetCode/: 1025.Divisor_Game.cpp  1047.Remove_All_Adjacent_Duplicates_In_String.cpp  1108.Defanging_an_IP_Address.cpp  143.Reorder_List.cpp  198.House_Robber.cpp  208.Implement_Trie(Prefix_Tree).cpp  213.House_Robber_II.cpp  22.Generate_Parentheses.cpp  263.Ugly_Number.cpp  27.Remove_Element.cpp  279.Perfect_Squares.cpp  300.Longest_Increasing_Subsequence.cpp  322.Coin_Change.cpp  401.Binary_Watch.cpp  448.Find_All_Numbers_Disappeared_in_an_Array.cpp  453.Minimum_Moves_to_Equal_Array_Elements.cpp  461.Hamming_Distance.cpp  503.Next_Greater_Element_II.cpp  5181.Distance_Between_Bus_Stops.cpp  64.Minimum_Path_Sum.cpp  72.Edit_Distance.cpp  763.Partition_Labels.cpp  767.Reorganize_String.cpp  962.Maximum_Width_Ramp.cpp  97.Interleaving_String.cpp
LeetCode/100.Same_Tree/: Solution.cpp
LeetCode/101. Symmetric Tree/: Solution.cpp
LeetCode/1038. Binary Search Tree to Greater Sum Tree/: Solution.cpp
LeetCode/112.PathSum/: Solution.cpp
LeetCode/162.Find_Peak_Element/: Solution.cpp
LeetCode/172.FactorialTrailingZeroes/: Solution.cpp
LeetCode/216.CombinationSumIII/: Solution.cpp
LeetCode/234.Palindrome_Linked_List/: Solution.cpp
LeetCode/35.Search_Insert_Position/: Solution.cpp
LeetCode/44.Wildcard_Matching/: Solution.cpp
LeetCode/66.PlusOne/: Solution.cpp
LeetCode/674.Longest_Continuous_Increasing_Subsequence/: Solution.cpp
LeetCode/69.Sqrtx/: Solution.cpp
LeetCode/704.Binary_Search/: Solution.cpp
LeetCode/771.JewelsandStones/: Solution.cpp
LeetCode/884.UncommonWordsfromTwoSentences/: Solution.cpp
LeetCode/92. Reverse Linked List II/: Solution.cpp
LeetCode/938.RangeSumofBST/: Solution.cpp
LeetCode/96.Unique_Binary_Search_Trees/: Solution.cpp
preparation/bit/: 1-1.cpp  1-2.cpp  2-1.cpp  2-2.cpp  2019-1.cpp
preparation/buaa/: 2014-1.c
preparation/nju/: 2019-1.cpp
preparation/tianda/: 2018-1.cpp  2018-2.cpp  2018-3.cpp  2019-1.cpp  2019-2.cpp  上机说明.doc
