cmake_minimum_required(VERSION 3.13)
project(demo)

set(CMAKE_CXX_STANDARD 14)

add_executable(BubbleSort 2.Classic_entry/1.sort/BubbleSort.cpp)
add_executable(sort 2.Classic_entry/1.sort/sort.cpp)
add_executable(sort_the_struct1 2.Classic_entry/1.sort/sort_the_struct1.cpp)
add_executable(sort_the_struct2 2.Classic_entry/1.sort/sort_the_struct2.cpp)
add_executable(data1 2.Classic_entry/2.data/data1.cpp)
add_executable(data2 2.Classic_entry/2.data/data2.cpp)
add_executable(Hash1 2.Classic_entry/3.Hash/Hash1.cpp)
add_executable(Hash2 2.Classic_entry/3.Hash/Hash2.cpp)
add_executable(search 2.Classic_entry/5.search/BinarySearch.cpp)
add_executable(FatMouseTrade 2.Classic_entry/6.GreedyAlgorithm/FatMouseTrade.cpp)
add_executable(Not_AC 2.Classic_entry/6.GreedyAlgorithm/Not_AC.cpp)

add_executable(Bracket_Matching_Problem 3.Data_Structure/1.stack/Bracket_Matching_Problem.cpp)

add_executable(Wildcard_Matching LeetCode/44.Wildcard_Matching/Solution.cpp)
add_executable(UncommonWordsfromTwoSentences LeetCode/884.UncommonWordsfromTwoSentences/Solution.cpp)
add_executable(CombinationSumIII LeetCode/216.CombinationSumIII/Solution.cpp)
add_executable(PathSum LeetCode/112.PathSum/Solution.cpp)

add_executable(SeqList SeqList.cpp)
add_executable(Linknode LinkNode.cpp)
add_executable(SeqStack SeqStack.cpp)
add_executable(LinkedStack LinkedStack.cpp)
add_executable(Graphmtx Graphmtx.cpp)
add_executable(floyed floyed.cpp)
