cmake_minimum_required(VERSION 3.13)
project(demo)

set(CMAKE_CXX_STANDARD 14)

add_executable(test test.cpp)

add_executable(BubbleSort 2.Classic_entry/1.sort/BubbleSort.cpp)
add_executable(sort 2.Classic_entry/1.sort/sort.cpp)
add_executable(sort_the_struct1 2.Classic_entry/1.sort/sort_the_struct1.cpp)
add_executable(sort_the_struct2 2.Classic_entry/1.sort/sort_the_struct2.cpp)
add_executable(data1 2.Classic_entry/2.data/data1.cpp)
add_executable(data2 2.Classic_entry/2.data/data2.cpp)
add_executable(Hash1 2.Classic_entry/3.Hash/Hash1.cpp)
add_executable(Hash2 2.Classic_entry/3.Hash/Hash2.cpp)
add_executable(search 2.Classic_entry/5.search/BinarySearch.cpp)
add_executable(FatMouseTrade 2.Classic_entry/6.GreedyAlgorithm/FatMouseTrade.cpp)
add_executable(Not_AC 2.Classic_entry/6.GreedyAlgorithm/Not_AC.cpp)

add_executable(Bracket_Matching_Problem 3.Data_Structure/1.stack/Bracket_Matching_Problem.cpp)
add_executable(Huffman_Tree 3.Data_Structure/2.Huffman_Tree/Huffman_Tree.cpp)
add_executable(Binary_Tree_Order 3.Data_Structure/3.Binary_Tree/Binary_Tree_Order)

add_executable(Special_Multiplication 4.Math_Problem/2.Digital_Disassembly/1.Special_Multiplication.cpp)
add_executable(Another_A+B 4.Math_Problem/3.Number_Conversion/1.Another_A+B.cpp)

add_executable(Wildcard_Matching LeetCode/44.Wildcard_Matching/Solution.cpp)
add_executable(UncommonWordsfromTwoSentences LeetCode/884.UncommonWordsfromTwoSentences/Solution.cpp)
add_executable(CombinationSumIII LeetCode/216.CombinationSumIII/Solution.cpp)
add_executable(PathSum LeetCode/112.PathSum/Solution.cpp)
add_executable(Unique_Binary_Search_Trees LeetCode/96.Unique_Binary_Search_Trees/Solution.cpp)
add_executable(162.Find_Peak_Element LeetCode/162.Find_Peak_Element/Solution.cpp)
add_executable(674.Longest_Continuous_Increasing_Subsequence LeetCode/674.Longest_Continuous_Increasing_Subsequence/Solution.cpp)
add_executable(704.Binary_Search LeetCode/704.Binary_Search/Solution.cpp)
add_executable(35.Search_Insert_Position LeetCode/35.Search_Insert_Position/Solution.cpp)
add_executable(69.Sqrtx LeetCode/69.Sqrtx/Solution.cpp)
add_executable(66.PlusOne LeetCode/66.PlusOne/Solution.cpp)
add_executable(172.FactorialTrailingZeroes LeetCode/172.FactorialTrailingZeroes/Solution.cpp)
add_executable(771.JewelsandStones LeetCode/771.JewelsandStones/Solution.cpp)
add_executable(64.Minimum_Path_Sum LeetCode/64.Minimum_Path_Sum.cpp)
add_executable(1025.Divisor_Game LeetCode/1025.Divisor_Game.cpp)
add_executable(448.Find_All_Numbers_Disappeared_in_an_Array LeetCode/448.Find_All_Numbers_Disappeared_in_an_Array.cpp)
add_executable(72.Edit_Distance LeetCode/72.Edit_Distance.cpp)
add_executable(279.Perfect_Squares LeetCode/279.Perfect_Squares.cpp)

add_executable(SeqList SeqList.cpp)
add_executable(Linknode LinkNode.cpp)
add_executable(SeqStack SeqStack.cpp)
add_executable(LinkedStack LinkedStack.cpp)
add_executable(Graphmtx Graphmtx.cpp)
add_executable(floyed floyed.cpp)


add_executable(2018-1 preparation/tianda/2018-1.cpp)
add_executable(2018-2 preparation/tianda/2018-2.cpp)
add_executable(2018-3 preparation/tianda/2018-3.cpp)
add_executable(tianda2019-1 preparation/tianda/2019-1.cpp)
add_executable(tianda2019-2 preparation/tianda/2019-2.cpp)

add_executable(2-1 preparation/bit/2-1.cpp)
add_executable(2-2 preparation/bit/2-2.cpp)
add_executable(1-1 preparation/bit/1-1.cpp)
add_executable(1-2 preparation/bit/1-2.cpp)
add_executable(bit2019-1 preparation/bit/2019-1.cpp)
add_executable(2014-1 preparation/buaa/2014-1.c)
add_executable(2019-1 preparation/nju/2019-1.cpp)